# ds-stock-analysis

./: README.md  data.py  pyproject.toml  rente.py  requirements.txt
data/: c25.csv  c25.xlsx  housing.xlsx
notebooks/: analysis.ipynb
scripts/: generate_simulation.py
src/: __main__.py  compounding.py  monthly_return.py  path_simulation.py
src/etl/: calculate_returns.py  simulate_returns.py
