[project]
name = "stocks"
version = "0.0.1"
authors = [
  { name="wiz", email="wilsonzhou92@gmail.com" },
]
description = "Stocks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]